--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@ p{
 }
 .card{
     height: 200px;
-    background-color: black;
     margin: 0px 1px;
+}
+img{
+    width: 100%;
+}
+.card-img{
+    width: 35%;
+}
+.card-text{
+    width: 55%;
 }
