--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,54 @@
-*{
-    box-sizing: border-box;
-}
-
-.space-Argument{
+.space-Argument {
     padding: 30px 0px;
 }
-h1{
-    color: #E53170;
+
+h1 {
+    color: #972f52;
     font-size: 3.5em;
 }
-p{
-    font-size: 1.5em;
+
+p {
+    font-size: 1.1em;
 }
-.card{
-    height: 200px;
-    margin: 0px 1px;
+a{
+    text-decoration: none;
+    font-size: 1.2em;
 }
-img{
-    width: 100%;
+
+.myCard {
+    height: 150px;
+    padding: 0;
+    background-color: black;
+    transition: all;
+    transition-duration: .3s;
 }
-.card-img{
+.card-img {
     width: 35%;
 }
+.card-img img{
+    width: 100%;
+    height: 100%;
+}
+.myCard:hover{
+    transform: scale(1.1);
+}
 .card-text{
-    width: 55%;
+    width: 65%;
+}
+#container-card {
+    display: flex;
+    justify-content: center;
+}
+
+.cardName {
+    font-size: 1.5em;
+    color: white;
+}
+
+.cardRole {
+    color: white;
+}
+
+.cardEmail {
+    color: lightblue;
 }
